2003-04-02  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in: use correct name for libcroco in .pc file

2003-03-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: Support text directions (bidi)
	* rsvg-text.c: Ditto
	
2003-03-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c: Support style information inside of defs paths
	
2003-03-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Support for <style> outside of a <defs> block
	
2003-03-24  Dom Lachowicz <cinamod@hotmail.com>

	* gimp-plugin/svg.c: Image size/resolution dialog, allow for 
	non-interactive use, ...
	
2003-03-21  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.h: Document rsvg_size_func
	* rsvg-styles.c: Whine/complain on invalid CSS documents, but chug
	along anyway
	
2003-03-19  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Re-enable libcroco support, make it the default
	* rsvg-styles.c (ccss_end_selector): Make libcroco support work
	
2003-03-19  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Disable libcroco support until libcroco implements
	the 1 remaining fn that I need from it
	* rsvg-styles.c (rsvg_parse_style_attrs): Handle tag#id, tag.klazz#id, 
	and tag.klazz much more properly
	
2003-03-18  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Updates for optional libcroco support
	* Makefile.am: ditto
	* librsvg-2.0.pc.in: ditto
	* rsvg-styles.c: ditto

2003-03-18  Dom Lachowicz <cinamod@hotmail.com> / Ross Alexander <ross.alexander@uk.neceur.com>

	* configure.in: Bump version # to 2.3.0
	* rsvg-shapes.h: Add RsvgDefsPath type, start_use()
	* rsvg-shapes.c: Work needed to handle def paths, start_use()
	* rsvg-defs.h: Add new defs type for paths
	* rsvg.c: Handle use, defs paths
	
== gnome-2-2 branch, 2.2.5 released ==
	
2003-03-18  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version # to 2.2.5

2003-03-17  Dom Lachowicz <cinamod@hotmail.com>

	* Makefile.am: additions for GIMP support
	* configure.in: ditto