@@ -1,5 +1,9 @@
 DIST_SUBDIRS= examples
 
+if PLATFORM_WIN32
+no_undefined = -no-undefined
+endif
+
 INCLUDES = $(GTK_CFLAGS) $(LIBGSF_CFLAGS) $(LIBCROCO_CFLAGS) $(LIBRSVG_CFLAGS) -I$(top_srcdir)
 
 enginedir = $(libdir)/gtk-2.0/$(GTK_VERSION)/engines
@@ -24,5 +28,5 @@ libsvg_la_SOURCES = 		\
 	svg-style.h		\
 	svg.h
 
-libsvg_la_LDFLAGS =  -avoid-version -module
-libsvg_la_LIBADD = $(GTK_LIBS) $(LIBRSVG_LIBS) $(LIBGSF_LIBS) $(LIBCROCO_LIBS)
+libsvg_la_LDFLAGS =  -avoid-version -module $(no_undefined)
+libsvg_la_LIBADD = $(GTK_LIBS) $(LIBRSVG_LIBS) $(top_builddir)/librsvg-2.la
